# coding-assistant-webui

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/coding_assistant_webui/: __init__.py  _jobs.py  _models.py  _specifications.py  jobs.py  models.py  specifications.py  webui.py
